--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,9 +7,9 @@
 		<div class="col-xs-6 text-center" class="task">
 			<div class="row">
 			  {{#each burgers}}
-			  	{{#unless this.devoured}}
+			  	{{#unless devoured}}
 				<div class="col-xs-9 text-center">
-					<pre>{{this.id}}. {{this.burger_name}}
+					<pre>{{id}}. {{burger_name}}
 					</pre>
 				  		<!-- {{this.Date}} -->
 				</div>
