--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,15 +7,15 @@
 		<div class="col-xs-6 text-center" class="task">
 			<div class="row">
 			  {{#each burgers}}
-			  	{{#unless devoured}}
+			  	{{#unless this.devoured}}
 				<div class="col-xs-9 text-center">
-					<pre>{{id}}. {{burger_name}}
+					<pre>{{this.id}}. {{this.burger_name}}
 					</pre>
 				  		<!-- {{this.Date}} -->
 				</div>
 				<div class="col-xs-3 text-center">
-					<form method="POST" action="/burgers/update?_method=PUT" class="button-size">
-						<input input type="hidden" type="text" name="burger_id" value={{this.id}}><br>
+					<form method="POST" action="/burgers/{{this.id}}?_method=PUT" class="button-size">
+						<input input type="hidden" type="text" name="devoured" value="true"><br>
 						<button type="submit" class="btn btn-default">Devour it!</button>
 					</form>
 				</div>
